implementing logos of login screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/gif.gif
+    - assets/logoLogin.png
+    - assets/title.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
