--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,10 +90,11 @@ flutter:
     - assets/gif.gif
     - assets/logoLogin.png
     - assets/title.png
-    - assets/title.png
     - assets/loginButton.png
     - assets/register.png
     - assets/registerButton.png
+    - assets/tutorial.png
+    - assets/secondTutorial.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
