--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
     - assets/tutorial.png
     - assets/secondTutorial.png
     - assets/photoHome.jpg
+    - assets/thirdTutorial.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
